<!--
  ~ Copyright 2017 mh@lambdasoup.com
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Block Vote</string>
    <string name="formatted">%.1f%%</string>
    <string name="name_unlimited">Bitcoin Unlimited</string>
    <string name="name_segwit">Segregated Witness</string>
    <string name="head_d1">1 day</string>
    <string name="head_d7">7 days</string>
    <string name="head_d30">30 days</string>
    <string name="stats_title">Current Statistics</string>
    <string name="info_nodata">Stats will become available shortly. This app receives data in the background - you do not need to keep this app open.</string>
    <string name="stats_info">These are the percentages of blocks signaling a certain scaling solution</string>
    <string name="menu_attributions">Open Source attributions</string>
    <string name="title_attributions">Open Source attributions</string>
    <string name="about_title">App info</string>
    <string name="about_info">This app is open source. To find more about this app and how you can collaborate and support the development, please visit the project\'s website.</string>
    <string name="about_button">open project website</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="name_segwit_short">SW</string>
    <string name="name_unlimited_short">BU</string>
    <string name="widget_info_period">during last 24h</string>
    <string name="widget_title">Block Vote</string>
    <string name="widget_empty">Waiting for data…</string>
    <string name="menu_privacy">Privacy Policy</string>
</resources>
